// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateLine renders with custom color 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #777777;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Mock Date
  </time>
</DocumentFragment>
`;

exports[`DateLine renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Mock Date
  </time>
</DocumentFragment>
`;

exports[`DateLine renders with provided date, format, prefix and suffix 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

<time
    class="emotion-0"
    datetime="Mock Date"
  >
    Updated: Mock Date, The Times
  </time>
</DocumentFragment>
`;
